# Todo-Agent

./: README.md
agent/: .gitignore  pyproject.toml  requirements.txt
agent/src/agent/: cli.py  main.py  setup.py  triage_agent.py
agent/src/agent/todo_agents/: auth_agents.py  todos_agent.py
agent/src/agent/todo_tools/: auth_tools.py  todo_tools.py
backend/: index.js  package.json
backend/config/: connectDB.js
backend/controller/: authController.js  todoController.js
backend/middleware/: authMiddleware.js
backend/models/: Todo.js  User.js
backend/routes/: authRoutes.js  todoRoutes.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
